Service-Pages-included home page video

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,17 @@
-<header class="masthead d-flex" >
-    <div class="container text-center my-auto" style=" padding-right: 4%;padding-left: 4%;padding-bottom: 2%;background: #f8f9fabf;padding-top: 4%;font-weight: bolder;    color: #7e5050!important;    height: fit-content;    width: fit-content;">
-        <h3 class="mb-5" >
+<div class="video-container">
+    <video autoplay muted loop>
+        <source src="../../assets/Video/Waves.mp4" type="video/mp4">
+      </video>
+
+      <div class="container  text-center my-auto" style=" padding: 4%;background: #f8f9fabf;font-weight: bolder;color: #7e5050!important;    height: fit-content;    width: fit-content;">
+        <img src="../../assets/img/cos-Black-bg.png" alt="" class="img-hero img-fluid">
+        <h3>
             Web Development Solutions 
             | Business software Solutions
             | Data Analysis Solutions
         </h3>
     </div>
+</div>
+
+<!-- <div class="masthead d-flex" > -->
+    
