--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -13,10 +13,22 @@
     <li class="sidebar-nav-item">
       <a class="js-scroll-trigger" routerLink="about">About</a>
     </li>
+
     <li class="dropdown sidebar-nav-item">
       <a class="js-scroll-trigger dropdown-toggle" data-toggle="dropdown">Services<b class="caret"></b></a>
       <ul class="dropdown-menu">
-        <li><a href="#">Web development</a>
+        
+        <li class="sidebar-nav-item">
+          <a class="js-scroll-trigger" routerLink="webdevelopment">web development</a>
+        </li>
+        <li class="sidebar-nav-item">
+          <a class="js-scroll-trigger" routerLink="webdesign">Web Designing</a>
+        </li>
+        <li class="sidebar-nav-item">
+          <a class="js-scroll-trigger" routerLink="apiintegration">API Integration</a>
+        </li>
+        <li class="sidebar-nav-item">
+          <a class="js-scroll-trigger" routerLink="dataservices">Data Services</a>
         </li>
       </ul>
     </li>
@@ -24,8 +36,8 @@
         <a class="js-scroll-trigger" routerLink="services">Services</a>
       </li> -->
     <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" routerLink="products">Our Products</a>
-      </li>
+      <a class="js-scroll-trigger" routerLink="products">Our Products</a>
+    </li>
     <!-- <li class="sidebar-nav-item">
         <a class="js-scroll-trigger" routerLink="GraphicsDisplay">Graphics Display</a>
       </li> -->
