--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -4,3 +4,28 @@
     background-attachment: fixed; 
     background-size: cover;
     }
+    .img-hero{
+        height: 7rem;
+        margin-bottom: 5%;
+    }
+    .video-container{
+        background-image: url(../../assets/img/bg-masthead.png);
+        position: relative;
+        height: 100vh;
+        width: 100%;
+        overflow: hidden;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .video-container video{
+        z-index: -99;
+        position: absolute;
+        height: auto;
+        width: auto;
+        min-width: 100%;
+        min-height: 100%;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+    }
