--- a/src/app/page-about/page-about.component.html
+++ b/src/app/page-about/page-about.component.html
@@ -6,9 +6,9 @@
     <div class="overlay"></div>
 </header>
 <div class="container text-center">
-    <img src="../../assets/img/Banners/about.png" alt=" Trust | Growth | Honesty">
+    <img src="../../assets/img/Banners/about.png" class="img-fluid" alt=" Trust | Growth | Honesty">
 </div>
-<section class="content-section" id="about">
+<section class="content-section">
     <div class="container">
         <div class="row">
             <div class="col-lg-10 mx-auto">
