--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
-.text-secondary{
-    color: #ffc107!important;
+.text-secondary {
+    color: #ffc107 !important;
 }
-.content-section-heading h3{
+
+.content-section-heading h3 {
     font-size: 1.5rem;
     text-transform: uppercase;
 }
-.my-masthead{
-    background-color:antiquewhite;
-    height: 15%;
-    }
+
+.my-masthead {
+    background-color: antiquewhite;
+    height: fit-content;
+    padding: 1%;
+}
+.img-services{
+    width: -webkit-fill-available;
+    margin-top: 1.5%;
+    margin-bottom: 1.5%;
+}
