--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,17 +1,20 @@
-<div class="video-container">
-    <video autoplay muted loop>
+<div class="bggradint">
+
+<div class="masthead d-flex">
+    <!-- <video autoplay muted loop>
         <source src="../../assets/Video/Waves.mp4" type="video/mp4">
-      </video>
+      </video> -->
 
       <div class="container  text-center my-auto" style=" padding: 4%;background: #f8f9fabf;font-weight: bolder;color: #7e5050!important;    height: fit-content;    width: fit-content;">
-        <img src="../../assets/img/cos-Black-bg.png" alt="" class="img-hero img-fluid">
-        <h3>
+        <img src="../../assets/img/cos-Black-bg.png" alt="" class=" animate__flipInY animate__animated  img-hero img-fluid">
+        <h3 class="animate__fadeInUp animate__delay-2s animate__animated ">
             Web Development Solutions 
             | Business software Solutions
             | Data Analysis Solutions
         </h3>
     </div>
 </div>
-
+    
+</div>
 <!-- <div class="masthead d-flex" > -->
     
