--- a/src/app/s-page-design/s-page-design.component.html
+++ b/src/app/s-page-design/s-page-design.component.html
@@ -1,14 +1,100 @@
-<header class="my-masthead d-flex">
-    <div class="container text-center my-auto" style="color: #7e5050;">
-        <h1 class="mb-1">Web Designing</h1>
-        <!-- Know us from Stones to satellites -->
+<header class="masthead ">
+    <div class="text-center masthead-text color-blue">
+        <h2 class="Uppercase font-large">Web Designing</h2>
+        <h3 class="Uppercase ">
+            Flexible | Scalable | Complex
+        </h3>
     </div>
-    <div class="overlay"></div>
 </header>
-<div class="container text-center">
-    <img src="../../assets/img/Banners/web-Design.png" class="img-fluid" alt=" Trust | Growth | Honesty">
-</div>
 <section class="content-section">
     <div class="container">
+        <p class="text-center text-large mb-5 color-blue">
+            "Web designing is process of providing exquisite and flowless user journey. Creativity is our first name and
+            we explore multiple domains to provide effortless user experience. According to values and vision of your
+            business we represent your brand. To provide such luxury experience we provide creative, reusable, and clean
+            UX and UI development for your web applications."
+        </p>
+        <div class="row">
+            <div class="col-md-6 text-center color-blue margin-top-s-p animate__animated animate__swing"
+                style="font-size: 5rem;">
+                <i class="fas fa-feather"></i>
+
+            </div>
+            <div class="col-md-6 text-justify">
+                <h3 class="text-center color-blue">Creative</h3>
+                <p>
+                    Creativity comes with discipline, as we follow strict guidelines to design UX/UI following latest
+                    updates determined by multiple industries. We have great knowledge of color combinations and shapes
+                    while designing custom designing. We use traditional way to design web pages, drawing raw designs on
+                    paper, even before toughing computers.
+                </p>
+            </div>
+            <div class="col-md-6 text-center color-blue margin-top-s-p animate__animated animate__pulse animate__delay-2s"
+                style="font-size: 5rem; ">
+                <i class="fas fa-dice-d20"></i>
+
+            </div>
+            <div class="col-md-6 text-justify">
+                <h3 class="text-center color-blue">Reusable</h3>
+                <p>
+                    As components of your web pages are going to be used in multiple pages, we design our web
+                    applications in Angular, which provides us feature to load same component faster on second use. The
+                    reusability of same component makes your website load faster, so you don’t need to worry about
+                    losing a customer because of slow loading speed. All in all, reusability is key to compete in this
+                    era of data for marketing, sales, and growth of any business.
+                </p>
+            </div>
+            <div class="col-md-6 text-center color-blue margin-top-s-p animate__animated animate__bounce animate__delay-4s"
+                style="font-size: 5rem;">
+                <i class="fas fa-gem"></i>
+            </div>
+            <div class="col-md-6 text-justify">
+                <h3 class="text-center color-blue">Clean</h3>
+                <p>
+                    As design can be elegant and prestigious only when it’s clean and motive of the artist can be
+                    fulfilled. We develop websites which can make your brand more elegant and can help your business in
+                    meaningful ways.
+                </p>
+            </div>
+        </div>
+        <div class="row margin-top-s-p">
+            <div class="col-md-4 text-center">
+                <span class="service-icon rounded-circle mx-auto mb-3">
+                    <i class="fas fa-atom"></i>
+                </span>
+                <h3 class="color-blue">Using complex algorithms</h3>
+                <p>
+                    As incremental behavior of data finding information and displaying is complex process in every
+                    business. We have professionals who can develop using complex algorithms like TensorFlow,
+                    Scikit-learn, Keras and multiple open-source platforms to fulfill complexity of applications.
+                </p>
+            </div>
+
+            <div class="col-md-4 text-center">
+                <span class="service-icon rounded-circle mx-auto mb-3">
+                    <i class="far fa-edit"></i>
+                </span>
+                <h3 class="color-blue">Web development from scratch</h3>
+                <p>
+                    We can develop and design web applications from scratch according to your usability and flexibility
+                    of your business. Our specialty is to develop a web application which are not only custom-made, but
+                    scalable, and any complexity.
+                </p>
+            </div>
+
+
+            <div class="col-md-4 text-center">
+                <span class="service-icon text-large rounded-circle mx-auto mb-3">
+                    <i class="fas fa-cash-register"></i>
+                </span>
+                <h3 class="color-blue">Domain Specific applications</h3>
+                <p>
+                    We had developed common solutions for your specific domains we can provide those solutions ready to
+                    deploy within a week. If you have Restaurant, Teaching institute we can provide solutions for those
+                    domains for your business. If you’re thinking of developing your ecommerce website or you want a
+                    application to manage your orders, inventory and invoicing we have got your back.
+                </p>
+            </div>
+        </div>
     </div>
 </section>
