--- a/src/app/s-page-integration/s-page-integration.component.html
+++ b/src/app/s-page-integration/s-page-integration.component.html
@@ -1,14 +1,113 @@
-<header class="my-masthead d-flex">
-    <div class="container text-center my-auto" style="color: #7e5050;">
-        <h1 class="mb-1">API Integration</h1>
-        <!-- Know us from Stones to satellites -->
+<header class="masthead ">
+    <div class="text-center masthead-text color-blue">
+        <h2 class="Uppercase font-large">API Integration- cross platform</h2>
+        <h3 class="Uppercase ">
+            resourceful | holistic | Adaptive
+        </h3>
     </div>
-    <div class="overlay"></div>
 </header>
-<div class="container text-center">
-    <img src="../../assets/img/Banners/API-Integration.png" class="img-fluid" alt=" Trust | Growth | Honesty">
-</div>
 <section class="content-section">
     <div class="container">
+        <p class="text-center text-large mb-5 color-blue">
+            "Cross platform API creation is important when you want to grow your organization faster, by adapting
+            technologies you can implement featured technologies developed by leaders of the fields. Using expert
+            knowledge and resources developed by well-established organization can help you recognize your business as
+            an expert. We can provide resourceful, understandable and well-integrated cross-platform integration for
+            multiple Payment gateways, Seek job posting, Marketing SMS integration and Webhooks."
+        </p>
+        <div class="row">
+            <div class="col-md-6 text-center color-blue margin-top-s-p animate__animated animate__swing"
+                style="font-size: 5rem;">
+                <i class="fas fa-binoculars"></i>
+            </div>
+            <div class="col-md-6 text-justify">
+                <h3 class="text-center color-blue">Resourceful</h3>
+                <p>
+                    We can identify needs of integration for your business to grow in the industry. As our team is
+                    proficient in fetching, posting and getting data from multiple platforms to make your web
+                    applications resourceful. Moreover, we encourage interactive information over static where user
+                    don’t need to rely on other platforms.
+                </p>
+            </div>
+            <div class="col-md-6 text-center color-blue margin-top-s-p animate__animated animate__pulse animate__delay-2s"
+                style="font-size: 5rem; ">
+                <i class="far fa-compass"></i>
+
+            </div>
+            <div class="col-md-6 text-justify">
+                <h3 class="text-center color-blue">Well-integrated</h3>
+                <p>
+                    If you’re looking for well-integrated platform for your business, we follow wholistic approach for
+                    API integration. Which can help you use all the available features of the platform you bought.
+                </p>
+            </div>
+        </div>
+        <div class="row margin-top-s-p">
+            <div class="col-md-4 text-center">
+                <!-- <span class="service-icon rounded-circle mx-auto mb-3">
+                    <i class="fas fa-atom"></i>
+                </span> -->
+                <h3 class="color-blue">Database Design</h3>
+                <p>
+                    We can provide database creation and development using diagrams to make your organization understand
+                    flow of data. The robust data can provide useful ness for life long data storage we can scale your
+                    existing database without the need of migration.
+                </p>
+            </div>
+
+            <div class="col-md-4 text-center">
+                <!-- <span class="service-icon rounded-circle mx-auto mb-3">
+                    <i class="far fa-edit"></i>
+                </span> -->
+                <h3 class="color-blue">Model building</h3>
+                <p>
+                    If you’re looking for a making chatbot from screech or generate machine learning model using
+                    multiple variables for your business. We can provide model specific to your domain as well as
+                    corelative data to make your model more secure.
+                </p>
+            </div>
+
+
+            <div class="col-md-4 text-center">
+                <!-- <span class="service-icon text-large rounded-circle mx-auto mb-3">
+                    <i class="fas fa-cash-register"></i>
+                </span> -->
+                <h3 class="color-blue">PowerBI/ Tableau</h3>
+                <p>
+                    If you want to create dashboard using leading technologies like Tableau and PowerBI, we can provide
+                    API data fetching for real time analysis and can create dashboard in your existing system.
+                </p>
+            </div>
+            <div class="col-md-4 text-center">
+                <!-- <span class="service-icon text-large rounded-circle mx-auto mb-3">
+                    <i class="fas fa-cash-register"></i>
+                </span> -->
+                <h3 class="color-blue">Forecasting</h3>
+                <p>
+                    We can work with google analytics and raw data to generate forecasting for your business for sales,
+                    CRM , production, and many more.
+                </p>
+            </div>
+            <div class="col-md-4 text-center">
+                <!-- <span class="service-icon text-large rounded-circle mx-auto mb-3">
+                    <i class="fas fa-cash-register"></i>
+                </span> -->
+                <h3 class="color-blue">ETL (extract, transform, and load)</h3>
+                <p>
+                    We can perform ETL for your existing structured and unstructured data into any database or data
+                    warehouse.
+                </p>
+            </div>
+            <div class="col-md-4 text-center">
+                <!-- <span class="service-icon text-large rounded-circle mx-auto mb-3">
+                    <i class="fas fa-cash-register"></i>
+                </span> -->
+                <h3 class="color-blue">Micro conversation</h3>
+                <p>
+                    We can provide basic level data services to transform from one file to another pivot table, data
+                    cleaning and validation to make your data clean and healthy to process faster.
+                </p>
+            </div>
+        </div>
     </div>
 </section>
