--- a/src/app/s-page-web-dev/s-page-web-dev.component.html
+++ b/src/app/s-page-web-dev/s-page-web-dev.component.html
@@ -1,17 +1,97 @@
 <header class="masthead ">
     <div class="text-center masthead-text">
-            <h2 class="Uppercase font-large">Web Development</h2>
-            <h3 class="Uppercase ">
-                Flexible 
-                | Scalable
-                | Complex
-            </h3>
-        </div>
+        <h2 class="Uppercase font-large">Web Development</h2>
+        <h3 class="Uppercase ">
+            Flexible | Scalable | Complex
+        </h3>
+    </div>
 </header>
 <section class="content-section">
     <div class="container">
-        <p>Web Development is time critical, result oriented and complex process. In the era of creativity and exploration, every business has their own requirements and specifications. To overcome needs of web development we strive to provide multiple solutions for your business needs.
-
+        <p class="text-center text-large mb-5">
+            "Web Development is time critical, result oriented and complex process. In the era of creativity and
+            exploration, every business has their own requirements and specifications. To overcome needs of web
+            development we strive to provide multiple solutions for your business needs."
         </p>
+        <div class="row">
+            <div class="col-md-6 text-center margin-top-s-p animate__animated animate__rubberBand"
+                style="font-size: 5rem; color: rgb(112, 59, 59);">
+                <i class="fas  fa-arrows-alt-h"></i>
+            </div>
+            <div class="col-md-6 text-justify">
+                <h3 class="text-center">Flexible</h3>
+                <p>
+                    We want to create an application for your custom needs, we use our methodology to understand your
+                    needs before the development and provide flexible web application experience. As being open minded
+                    towards all the organization we provide all kinds of solutions which can help you get relevant
+                    information for your business aesthetics.
+                </p>
+            </div>
+            <div class="col-md-6 text-center margin-top-s-p animate__animated animate__bounce animate__delay-2s"
+                style="font-size: 5rem; color: rgb(112, 59, 59);">
+                <i class="fas fa-balance-scale"></i>
+            </div>
+            <div class="col-md-6 text-justify">
+                <h3 class="text-center">Scalable</h3>
+                <p>
+                    We can deploy applications from small-scale to large-scale: Including multiple modules and related
+                    applications however its suite your business. We can provide support to your business application
+                    from micro-organization to giant sized organization. As increasing size of organization is common
+                    nature, we provide support to our customers with updates that can help grow your organization.
+                </p>
+            </div>
+            <div class="col-md-6 text-center margin-top-s-p animate__animated animate__tada animate__delay-4s"
+                style="font-size: 5rem; color: rgb(112, 59, 59);">
+                <i class="fas fa-square-root-alt"></i>
+            </div>
+            <div class="col-md-6 text-justify">
+                <h3 class="text-center">Complex</h3>
+                <p>
+                    We have developed our development model to encourage innovation in every scale. As we have
+                    methodology to breakdown tasks into smaller tasks. We are keen to solve smallest complexity to
+                    highest amount of complexity. As our team is keen and experts in their fields of solving problems,
+                    we can encounter any complexity without breaking a sweat.
+                </p>
+            </div>
+        </div>
+        <div class="row margin-top-s-p">
+            <div class="col-md-4 text-center">
+                <span class="service-icon rounded-circle mx-auto mb-3">
+                    <i class="fas fa-atom"></i>
+                  </span>
+                <h3>Using complex algorithms</h3>
+                <p>
+                    As incremental behavior of data finding information and displaying is complex process in every
+                    business. We have professionals who can develop using complex algorithms like TensorFlow,
+                    Scikit-learn, Keras and multiple open-source platforms to fulfill complexity of applications.
+                </p>
+            </div>
+
+            <div class="col-md-4 text-center">
+                <span class="service-icon rounded-circle mx-auto mb-3">
+                    <i class="far fa-edit"></i>
+                  </span>
+                <h3>Web development from scratch</h3>
+                <p>
+                    We can develop and design web applications from scratch according to your usability and flexibility
+                    of your business. Our specialty is to develop a web application which are not only custom-made, but
+                    scalable, and any complexity.
+                </p>
+            </div>
+
+
+            <div class="col-md-4 text-center">
+                <span class="service-icon text-large rounded-circle mx-auto mb-3">
+                    <i class="fas fa-cash-register"></i>
+                  </span>
+                <h3>Domain Specific applications</h3>
+                <p>
+                    We had developed common solutions for your specific domains we can provide those solutions ready to
+                    deploy within a week. If you have Restaurant, Teaching institute we can provide solutions for those
+                    domains for your business. If you’re thinking of developing your ecommerce website or you want a
+                    application to manage your orders, inventory and invoicing we have got your back.
+                </p>
+            </div>
+        </div>
     </div>
 </section>
