--- a/src/app/s-page-data/s-page-data.component.html
+++ b/src/app/s-page-data/s-page-data.component.html
@@ -1,14 +1,123 @@
-<header class="my-masthead d-flex">
-    <div class="container text-center my-auto" style="color: #7e5050;">
-        <h1 class="mb-1">Data Services</h1>
-        <!-- Know us from Stones to satellites -->
+<header class="masthead ">
+    <div class="text-center masthead-text color-blue">
+        <h2 class="Uppercase font-large">Data Analysis</h2>
+        <h3 class="Uppercase ">
+            Insightful | Real-time | Mathematical
+        </h3>
     </div>
-    <div class="overlay"></div>
 </header>
-<div class="container text-center">
-    <img src="../../assets/img/Banners/Data-services.png" class="img-fluid" alt=" Trust | Growth | Honesty">
-</div>
 <section class="content-section">
     <div class="container">
+        <p class="text-center text-large mb-5 color-blue">
+            "As increasing amount of data encouraged us to develop data solutions using statistical and mathematical
+            approach. As understanding data and using it for business growth is pivotal while data is new raw gold. We
+            have team of data analysts who can carve your data and convert it into jewel of information. We provide
+            insights generation, model building, business and sales forecasting, real-time visualization and automation
+            of your data using: Python, R, Tableau, Power BI and many open source platforms."
+        </p>
+        <div class="row">
+            <div class="col-md-6 text-center color-blue margin-top-s-p animate__animated animate__swing"
+                style="font-size: 5rem;">
+                <i class="fas fa-binoculars"></i>
+            </div>
+            <div class="col-md-6 text-justify">
+                <h3 class="text-center color-blue">Insightful</h3>
+                <p>
+                    We perform hypothesis testing and model generation using multiple complex machine learning
+                    algorithms to distinguish insight of the data. We have over 10 datasets to find common correlations
+                    of the data. As data analysts should have knowledge of expertise in domain specifics to identify
+                    variables we have experts in: Ecommerce, Restaurants and Clinical data.
+                </p>
+            </div>
+            <div class="col-md-6 text-center color-blue margin-top-s-p animate__animated animate__pulse animate__delay-2s"
+                style="font-size: 5rem; ">
+                <i class="far fa-compass"></i>
+
+            </div>
+            <div class="col-md-6 text-justify">
+                <h3 class="text-center color-blue">Real-time</h3>
+                <p>
+                    We can generate automation of data to generate information in real-time. We develop and deploy model
+                    specific to your domain to understand your needs and display real-time data in dashboard using
+                    Tableau.
+                </p>
+            </div>
+            <div class="col-md-6 text-center color-blue margin-top-s-p animate__animated animate__bounce animate__delay-4s"
+                style="font-size: 5rem;">
+                <i class="fas fa-box-open"></i>
+            </div>
+            <div class="col-md-6 text-justify">
+                <h3 class="text-center color-blue">Database Storage</h3>
+                <p>
+                    We can build robust databases knowing your requirements and deliver atomic, consistent and durable
+                    database. Moreover, we can provide multiple data storing methods to retrieve and load data faster
+                    using database performance.
+                </p>
+            </div>
+        </div>
+        <div class="row margin-top-s-p">
+            <div class="col-md-4 text-center">
+                <!-- <span class="service-icon rounded-circle mx-auto mb-3">
+                    <i class="fas fa-atom"></i>
+                </span> -->
+                <h3 class="color-blue">Database Design</h3>
+                <p>
+                    We can provide database creation and development using diagrams to make your organization understand
+                    flow of data. The robust data can provide useful ness for life long data storage we can scale your
+                    existing database without the need of migration.
+                </p>
+            </div>
+
+            <div class="col-md-4 text-center">
+                <!-- <span class="service-icon rounded-circle mx-auto mb-3">
+                    <i class="far fa-edit"></i>
+                </span> -->
+                <h3 class="color-blue">Model building</h3>
+                <p>
+                    If you’re looking for a making chatbot from screech or generate machine learning model using
+                    multiple variables for your business. We can provide model specific to your domain as well as
+                    corelative data to make your model more secure.
+                </p>
+            </div>
+
+
+            <div class="col-md-4 text-center">
+                <!-- <span class="service-icon text-large rounded-circle mx-auto mb-3">
+                    <i class="fas fa-cash-register"></i>
+                </span> -->
+                <h3 class="color-blue">PowerBI/ Tableau</h3>
+                <p>
+                    If you want to create dashboard using leading technologies like Tableau and PowerBI, we can provide
+                    API data fetching for real time analysis and can create dashboard in your existing system.
+                </p>
+            </div>
+            <div class="col-md-4 text-center">
+                <!-- <span class="service-icon text-large rounded-circle mx-auto mb-3">
+                    <i class="fas fa-cash-register"></i>
+                </span> -->
+                <h3 class="color-blue">Forecasting</h3>
+                <p>
+                    We can work with google analytics and raw data to generate forecasting for your business for sales, CRM , production, and many more.
+                </p>
+            </div>
+            <div class="col-md-4 text-center">
+                <!-- <span class="service-icon text-large rounded-circle mx-auto mb-3">
+                    <i class="fas fa-cash-register"></i>
+                </span> -->
+                <h3 class="color-blue">ETL (extract, transform, and load)</h3>
+                <p>
+                    We can perform ETL for your existing structured and unstructured data into any database or data warehouse. 
+                </p>
+            </div>
+            <div class="col-md-4 text-center">
+                <!-- <span class="service-icon text-large rounded-circle mx-auto mb-3">
+                    <i class="fas fa-cash-register"></i>
+                </span> -->
+                <h3 class="color-blue">Micro conversation</h3>
+                <p>
+                    We can provide basic level data services to transform from one file to another pivot table, data cleaning and validation to make your data clean and healthy to process faster.
+                </p>
+            </div>
+        </div>
     </div>
 </section>
