--- a/src/app/s-page-web-dev/s-page-web-dev.component.css
+++ b/src/app/s-page-web-dev/s-page-web-dev.component.css
@@ -11,6 +11,24 @@
     padding: 2%;
 }
 
+.margin-top-s-p{
+    margin-top: 3rem;
+
+}
+.text-large{
+    font-size: larger;
+}
+.service-icon {
+    background-color: #343a40;
+    color: #e9ecef;
+    height: 7.6rem;
+    width: 7.9rem;
+    display: block;
+    line-height: 7.5rem;
+    font-size: 4rem;
+    box-shadow: 0 3px 14px 0 rgb(0 0 0 / 10%);
+    text-align: -webkit-center;
+}
 .masthead {
     min-height: fit-content !important;
     position: relative; 
