--newcss-theme-color

--- a/src/app/s-page-design/s-page-design.component.html
+++ b/src/app/s-page-design/s-page-design.component.html
@@ -1,5 +1,5 @@
 <header class="masthead ">
-    <div class="text-center masthead-text color-blue">
+    <div class="text-center masthead-text theme-color">
         <h2 class="Uppercase font-large">Web Designing</h2>
         <h3 class="Uppercase ">
             Flexible | Scalable | Complex
@@ -8,20 +8,20 @@
 </header>
 <section class="content-section">
     <div class="container">
-        <p class="text-center text-large mb-5 color-blue">
+        <p class="text-center text-large mb-5 theme-color">
             "Web designing is process of providing exquisite and flowless user journey. Creativity is our first name and
             we explore multiple domains to provide effortless user experience. According to values and vision of your
             business we represent your brand. To provide such luxury experience we provide creative, reusable, and clean
             UX and UI development for your web applications."
         </p>
         <div class="row">
-            <div class="col-md-6 text-center color-blue margin-top-s-p animate__animated animate__swing"
+            <div class="col-md-6 text-center theme-color margin-top-s-p animate__animated animate__swing"
                 style="font-size: 5rem;">
                 <i class="fas fa-feather"></i>
 
             </div>
             <div class="col-md-6 text-justify">
-                <h3 class="text-center color-blue">Creative</h3>
+                <h3 class="text-center theme-color">Creative</h3>
                 <p>
                     Creativity comes with discipline, as we follow strict guidelines to design UX/UI following latest
                     updates determined by multiple industries. We have great knowledge of color combinations and shapes
@@ -29,13 +29,13 @@
                     paper, even before toughing computers.
                 </p>
             </div>
-            <div class="col-md-6 text-center color-blue margin-top-s-p animate__animated animate__pulse animate__delay-2s"
+            <div class="col-md-6 text-center theme-color margin-top-s-p animate__animated animate__pulse animate__delay-2s"
                 style="font-size: 5rem; ">
                 <i class="fas fa-dice-d20"></i>
 
             </div>
             <div class="col-md-6 text-justify">
-                <h3 class="text-center color-blue">Reusable</h3>
+                <h3 class="text-center theme-color">Reusable</h3>
                 <p>
                     As components of your web pages are going to be used in multiple pages, we design our web
                     applications in Angular, which provides us feature to load same component faster on second use. The
@@ -44,12 +44,12 @@
                     era of data for marketing, sales, and growth of any business.
                 </p>
             </div>
-            <div class="col-md-6 text-center color-blue margin-top-s-p animate__animated animate__bounce animate__delay-4s"
+            <div class="col-md-6 text-center theme-color margin-top-s-p animate__animated animate__bounce animate__delay-4s"
                 style="font-size: 5rem;">
                 <i class="fas fa-gem"></i>
             </div>
             <div class="col-md-6 text-justify">
-                <h3 class="text-center color-blue">Clean</h3>
+                <h3 class="text-center theme-color">Clean</h3>
                 <p>
                     As design can be elegant and prestigious only when it’s clean and motive of the artist can be
                     fulfilled. We develop websites which can make your brand more elegant and can help your business in
@@ -59,40 +59,40 @@
         </div>
         <div class="row margin-top-s-p">
             <div class="col-md-4 text-center">
-                <span class="service-icon rounded-circle mx-auto mb-3">
-                    <i class="fas fa-atom"></i>
+                <span class="theme-color service-icon rounded-circle mx-auto mb-3">
+                    <i class="fas fa-angle-double-up"></i>
                 </span>
-                <h3 class="color-blue">Using complex algorithms</h3>
+                <h3 class="theme-color">Search-engine optimized</h3>
                 <p>
-                    As incremental behavior of data finding information and displaying is complex process in every
-                    business. We have professionals who can develop using complex algorithms like TensorFlow,
-                    Scikit-learn, Keras and multiple open-source platforms to fulfill complexity of applications.
+                    If you’re looking for fast and content specific websites, that can make your business pop-up in the
+                    queue. As our SEO team is keen to make your business visible and highlight to your targeted space we
+                    assess and implement optimizations even after deployment of the product.
                 </p>
             </div>
 
             <div class="col-md-4 text-center">
-                <span class="service-icon rounded-circle mx-auto mb-3">
-                    <i class="far fa-edit"></i>
+                <span class="theme-color service-icon rounded-circle mx-auto mb-3">
+                    <i class="fas fa-mobile-alt"></i>
                 </span>
-                <h3 class="color-blue">Web development from scratch</h3>
+                <h3 class="theme-color">Mobile Friendly</h3>
                 <p>
-                    We can develop and design web applications from scratch according to your usability and flexibility
-                    of your business. Our specialty is to develop a web application which are not only custom-made, but
-                    scalable, and any complexity.
+                    If you want well regulated web design look no further than us, as we provide web designs which can
+                    be used in any screen sizes from mobile, tablets, laptops to 4k and 8k screens, if you want to
+                    present your product on the podium 😉.
                 </p>
             </div>
 
 
             <div class="col-md-4 text-center">
-                <span class="service-icon text-large rounded-circle mx-auto mb-3">
-                    <i class="fas fa-cash-register"></i>
+                <span class="theme-color service-icon text-large rounded-circle mx-auto mb-3">
+                    <i class="fab fa-black-tie"></i>
                 </span>
-                <h3 class="color-blue">Domain Specific applications</h3>
+                <h3 class="theme-color">Professional Landing</h3>
                 <p>
-                    We had developed common solutions for your specific domains we can provide those solutions ready to
-                    deploy within a week. If you have Restaurant, Teaching institute we can provide solutions for those
-                    domains for your business. If you’re thinking of developing your ecommerce website or you want a
-                    application to manage your orders, inventory and invoicing we have got your back.
+                    We deliver inbound marketing strategy to attract customers on the first look at your website. We are
+                    true believers in traditional “ First impression” and by creating best landing page we ensure that,
+                    if customer comes, he stays. We also make sure that, brand values are well represented to earn the
+                    trust and maintain core values.
                 </p>
             </div>
         </div>
