--updates-features-product page

--- a/src/app/page-contact/page-contact.component.html
+++ b/src/app/page-contact/page-contact.component.html
@@ -1,8 +1,8 @@
   <header class="my-masthead d-flex" >
-    <div class="container text-center my-auto" style="color: #7e5050;">
+    <div class="container text-center my-auto masthead-text" >
         <h1 class="mb-1">Contact Us</h1>
         Talk to us or leave a feedback  
-        <app-contact></app-contact>
     </div>
+
 </header>
-  
+<app-contact></app-contact>  
