--- a/src/app/page-pricing/page-pricing.component.html
+++ b/src/app/page-pricing/page-pricing.component.html
@@ -1,5 +1,5 @@
 <header class="my-masthead d-flex">
-  <div class="container text-center my-auto" style="color: #7e5050;">
+  <div class="container text-center my-auto masthead-text" >
     <h1 class="mb-1">Pricings</h1>
     Budget always matters.
   </div>
