--- a/src/styles.css
+++ b/src/styles.css
@@ -19,12 +19,12 @@
     margin-bottom: 1.5%;
 }
 .theme-color{
-    color: #7e5050!important;
+    color: #000000!important;
     background: #ffffff00;
 }
 .masthead-text {
     padding: 2%;
-    color: #7e5050!important;
+    color: #270101!important;
     background: #ffffffc7;
     font-weight: bolder;
     width: 100%;
