--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -12,7 +12,7 @@
       </div> -->
       <div class="row no-gutters">
         <div class="col-lg-6">
-          <a class="portfolio-item" href="#!">
+          <a class="portfolio-item" routerLink="/products">
             <div class="caption">
               <div class="caption-content">
                 <div class="h2">COS E-commerce</div>
@@ -23,7 +23,7 @@
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="#!">
+          <a class="portfolio-item" routerLink="/products">
             <div class="caption">
               <div class="caption-content">
                 <div class="h2">I & I Management</div>
@@ -34,7 +34,7 @@
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="#!">
+          <a class="portfolio-item" routerLink="/products">
             <div class="caption">
               <div class="caption-content">
                 <div class="h2">Restaurents and Resrvations</div>
@@ -45,7 +45,7 @@
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="#!">
+          <a class="portfolio-item" routerLink="/products">
             <div class="caption">
               <div class="caption-content">
                 <div class="h2">Assesment helper</div>
