--Services-Page-img

--- a/src/app/s-page-data/s-page-data.component.html
+++ b/src/app/s-page-data/s-page-data.component.html
@@ -15,6 +15,9 @@
             insights generation, model building, business and sales forecasting, real-time visualization and automation
             of your data using: Python, R, Tableau, Power BI and many open source platforms."
         </p>
+        <div class="img mb-5">
+            <img class="img-fluid" src="../../assets/img/Banners/4.jpg" alt="">
+        </div>
         <div class="row">
             <div class="col-md-6 text-center theme-color margin-top-s-p animate__animated animate__swing"
                 style="font-size: 5rem;">
