--- a/src/app/s-page-design/s-page-design.component.html
+++ b/src/app/s-page-design/s-page-design.component.html
@@ -14,6 +14,9 @@
             business we represent your brand. To provide such luxury experience we provide creative, reusable, and clean
             UX and UI development for your web applications."
         </p>
+        <div class="img mb-5">
+            <img class="img-fluid" src="../../assets/img/Banners/1.jpg" alt="">
+        </div>
         <div class="row">
             <div class="col-md-6 text-center theme-color margin-top-s-p animate__animated animate__swing"
                 style="font-size: 5rem;">
