--- a/src/app/s-page-integration/s-page-integration.component.html
+++ b/src/app/s-page-integration/s-page-integration.component.html
@@ -15,6 +15,9 @@
             an expert. We can provide resourceful, understandable and well-integrated cross-platform integration for
             multiple Payment gateways, Seek job posting, Marketing SMS integration and Webhooks."
         </p>
+        <div class="img mb-5">
+            <img class="img-fluid" src="../../assets/img/Banners/3.jpg" alt="">
+        </div>
         <div class="row">
             <div class="col-md-6 text-center theme-color margin-top-s-p animate__animated animate__swing"
                 style="font-size: 5rem;">
