--- a/src/app/s-page-web-dev/s-page-web-dev.component.html
+++ b/src/app/s-page-web-dev/s-page-web-dev.component.html
@@ -13,6 +13,10 @@
             exploration, every business has their own requirements and specifications. To overcome needs of web
             development we strive to provide multiple solutions for your business needs."
         </p>
+    
+        <div class="img mb-5">
+            <img class="img-fluid" src="../../assets/img/Banners/2.jpg" alt="">
+        </div>
         <div class="row">
             <div class="col-md-6 text-center theme-color margin-top-s-p animate__animated animate__rubberBand"
                 style="font-size: 5rem;">
