--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -41,9 +41,9 @@
     <!-- <li class="sidebar-nav-item">
         <a class="js-scroll-trigger" routerLink="GraphicsDisplay">Graphics Display</a>
       </li> -->
-    <li class="sidebar-nav-item">
+    <!-- <li class="sidebar-nav-item">
       <a class="js-scroll-trigger" routerLink="pricing">Pricings</a>
-    </li>
+    </li> -->
     <li class="sidebar-nav-item">
       <a class="js-scroll-trigger" routerLink="Contact">Contact Us</a>
     </li>
