--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,12 +2,12 @@
   <div class="container">
     <ul class="list-inline mb-5">
       <li class="list-inline-item">
-        <a class="social-link rounded-circle text-white mr-3" href="">
+        <a class="social-link rounded-circle text-white mr-3" href="https://www.facebook.com/Creative-Optimum-Solution-101248385821673" target="_blank">
           <i class="icon-social-facebook"></i>
         </a>
       </li>
       <li class="list-inline-item">
-        <a class="social-link rounded-circle text-white mr-3" href="#!">
+        <a class="social-link rounded-circle text-white mr-3" href="https://twitter.com/CreOpSoln">
           <i class="icon-social-twitter"></i>
         </a>
       </li>
